objects/Iteration__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Iteration_Number__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <label>Iteration Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Iterations</relationshipLabel>
        <relationshipName>Iterations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Iteration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ITER-{000000}</displayFormat>
        <label>Iteration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Iterations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>